# unifi-mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  API.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  Dockerfile  PLAN.md  README.md  RELEASE_NOTES_0.2.5.md  SECURITY.md  coverage.json  docker-compose.yml  mcp-registry.json  package.json  pyproject.toml
.claude/skills/fastmcp/: CLAUDE.md
.claude/skills/mcp-builder/scripts/: connections.py
.github/workflows/: bug-report-handler.yml  claude-auto-triage.yml  claude.yml
.memsearch/memory/: 2026-04-26.md  2026-04-27.md  2026-04-30.md
.omc/: project-memory.json
.omc/sessions/: 0dfd89a3-ff33-4a7c-a9d4-66534d2e747a.json  b8473230-a068-4813-bd0a-ef85892cde8e.json  fe939ec2-a969-4232-98f2-648938692a11.json
.serena/: project.yml
docs/: UNIFI_API.md
docs/archive/: CODE_SCANNING_REPORT.md  IMPLEMENTATION_PLAN.md  RELEASE_COMPLETION_GUIDE.md  SCRAPER_IMPLEMENTATION.md  SESSION_SUMMARY.md  TESTING_PLAN.md  TEST_COVERAGE_ROADMAP.md  VERIFICATION_REPORT.md  WARP.md  ZBF_STATUS.md
src/: __init__.py  cache.py  main.py  tool_registry.py
src/api/: client.py  site_manager_client.py
src/config/: __init__.py  config.py
src/models/: __init__.py  docs.md  firewall_group.py  firewall_policy.py  network.py  port_profile.py  qos_profile.py  radius.py  topology.py  traffic_flow.py
src/tools/: __init__.py  acls.py  application.py  backups.py  client_management.py  clients.py  content_filtering.py  device_control.py  devices.py  dhcp_reservations.py  dns_management.py  docs.md  dpi.py  dpi_tools.py  firewall.py  firewall_groups.py  firewall_policies.py  firewall_zones.py  network_config.py  networks.py  port_forwarding.py  port_profiles.py  qos.py  radius.py  reference_data.py  site_manager.py  site_vpn.py  sites.py  topology.py  traffic_flows.py  traffic_matching_lists.py  vouchers.py  vpn.py  wans.py  wifi.py
src/utils/: audit.py  sanitize.py  validators.py
tests/: conftest.py
tests/integration/: run_all_tests.py  test_client_ops_suite.py  test_client_suite.py  test_cloud_suite.py  test_device_ops_suite.py  test_device_suite.py  test_dpi_suite.py  test_firewall_suite.py  test_firewall_zones_suite.py  test_network_suite.py  test_port_forwarding_suite.py  test_traffic_flows_suite.py
tests/unit/: test_cache.py  test_security.py  test_topology_models.py
tests/unit/api/: test_client.py
tests/unit/config/: test_config.py  test_v2_api_path.py
tests/unit/models/: test_alarm_models.py  test_content_filtering_models.py  test_firewall_policy.py  test_static_dns_models.py  test_system_log_models.py  test_wan_models.py  test_wifi_stats_models.py
tests/unit/tools/: docs.md  test_acls_tools.py  test_alarms_tools.py  test_application_tools.py  test_backups_tools.py  test_client_management_tools.py  test_content_filtering_tools.py  test_device_control_tools.py  test_devices_tools.py  test_dhcp_reservations_tools.py  test_dpi_tools.py  test_firewall_groups_tools.py  test_firewall_policies.py  test_firewall_tools.py  test_firewall_zones_tools.py  test_network_config_tools.py  test_port_forwarding_tools.py  test_port_profile_tools.py  test_qos_tools.py  test_radius_tools.py  test_reference_data_tools.py  test_site_manager_tools.py  test_sites_tools.py  test_static_dns_tools.py  test_system_log_tools.py  test_topology_tools.py  test_traffic_flows_tools.py  test_traffic_matching_lists_tools.py  test_vouchers_tools.py  test_vpn_tools.py  test_wan_tools.py  test_wifi_stats_tools.py  test_wifi_tools.py  test_zbf_matrix_tools.py
tests/unit/utils/: test_audit.py  test_validators.py
tests/unit/webhooks/: test_webhooks.py
